[package]
name = "mr_master"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
futures.workspace = true
tarpc.workspace = true
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
uuid.workspace = true
clap.workspace = true
serde_json.workspace = true

mr_common = { path = "../mr_common" }
