[package]
name = "kv_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
env_logger.workspace = true
futures.workspace = true
serial_test.workspace = true

kv_server = { path = "../kv_server" }
kv_clerk = { path = "../kv_clerk" }
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
